权限第一步完成

--- a/bdazjweb/src/main/resources/public/index.html
+++ b/bdazjweb/src/main/resources/public/index.html
@@ -3,7 +3,7 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta charset="UTF-8">
 	<title>佰聆数据（杭州）</title>
-	<link rel="stylesheet" type="text/css" href="css/style2.0.css">
+	<link rel="stylesheet" type="text/css" href="./assets/css/style2.0.css">
 	<style type="text/css">
 		ul li{font-size: 30px;color:#2ec0f6;}
 		.tyg-div{z-index:-1000;float:left;position:absolute;left:5%;top:20%;}
@@ -79,37 +79,37 @@
 		<div class="title1">中国领先的大数据挖掘分析应用解决方案提供商</div>
 		<div class="imgGroug">
 			<ul>
-				<img alt="" class="img0 png" src="/img/page1_0.png">
-				<img alt="" class="img1 png" src="./img/page1_1.png">
-				<img alt="" class="img2 png" src="./img/page1_2.png">
+				<img alt="" class="img0 png" src="./assets/img/page1_0.png">
+				<img alt="" class="img1 png" src="./assets/img/page1_1.png">
+				<img alt="" class="img2 png" src="./assets/img/page1_2.png">
 			</ul>
 		</div>
-		<img alt="" class="img3 png" src="./img/page1_3.jpg">
+		<img alt="" class="img3 png" src="./assets/img/page1_3.jpg">
 	</div>
 </div>
 <div class="tyg-div-denglv">
 	<div class="tyg-div-form">
-		<form action="">
+		<form action="/login" id="loginForm" method="post">
 			<h2>登录</h2><p class="tyg-p">欢迎访问  佰聆数据</p>
 			<div style="margin:5px 0px;">
-				<input type="text" placeholder="请输入账号..."/>
+				<input type="text" placeholder="请输入账号..." name="username"/>
 			</div>
 			<div style="margin:5px 0px;">
-				<input type="text" placeholder="请输入密码..."/>
+				<input type="text" placeholder="请输入密码..." name="password"/>
 			</div>
 			<div style="margin:5px 0px;">
 				<input type="text" style="width:150px;" placeholder="请输入验证码..."/>
-				<img src="./img/1.png" style="vertical-align:bottom;" alt="验证码"/>
+				<img src="./assets/img/1.png" style="vertical-align:bottom;" alt="验证码"/>
 			</div>
-			<button type="submit" >登<span style="width:20px;"></span>录</button>
+			<button type="submit" id="loginButton">登<span style="width:20px;"></span>录</button>
 		</form>
 	</div>
 </div>
 
-<script type="text/javascript" src="./js/jquery-1.8.0.min.js"></script>
-<script type="text/javascript" src="./js/com.js"></script>
+<script type="text/javascript" src="./assets/js/jquery-1.8.0.min.js"></script>
+<script type="text/javascript" src="./assets/js/com.js"></script>
 <!--[if IE 6]>
-<script language="javascript" type="text/javascript" src="./script/ie6_png.js"></script>
+<script language="javascript" type="text/javascript" src="./assets/script/ie6_png.js"></script>
 <script language="javascript" type="text/javascript">
 	DD_belatedPNG.fix(".png");
 </script>
