--- a/bdazjweb/src/main/resources/public/index.html
+++ b/bdazjweb/src/main/resources/public/index.html
@@ -98,7 +98,7 @@
 				<input type="text" placeholder="请输入密码..." name="password"/>
 			</div>
 			<div style="margin:5px 0px;">
-				<input type="text" style="width:150px;" placeholder="请输入验证码..."/>
+				<input type="text" name="imageCode" style="width:150px;" placeholder="请输入验证码..."/>
 				<img src="/captcha/graphical" style="vertical-align:bottom;" alt="验证码"/>
 			</div>
 			<button type="submit" id="loginButton">登<span style="width:20px;"></span>录</button>
