添加记住我

--- a/bdazjweb/src/main/resources/public/index.html
+++ b/bdazjweb/src/main/resources/public/index.html
@@ -98,6 +98,9 @@
 				<input type="text" placeholder="请输入密码..." name="password"/>
 			</div>
 			<div style="margin:5px 0px;">
+				记住我<input type="checkbox"  name="remember-me" value="true"/>
+			</div>
+			<div style="margin:5px 0px;">
 				<input type="text" name="imageCode" style="width:150px;" placeholder="请输入验证码..."/>
 				<img src="/captcha/graphical?width=100" style="vertical-align:bottom;" alt="验证码"/>
 			</div>
