--- a/bdazjweb/src/main/resources/public/index.html
+++ b/bdazjweb/src/main/resources/public/index.html
@@ -107,6 +107,26 @@
 			<button type="submit" id="loginButton">登<span style="width:20px;"></span>录</button>
 		</form>
 	</div>
+	<h3>短信登录</h3>
+	<form action="/authentication/mobile" method="post">
+		<table>
+			<tr>
+				<td>手机号:</td>
+				<td><input type="text" name="phoneNumberParam" value="13012345678"></td>
+			</tr>
+			<tr>
+				<td>短信验证码:</td>
+				<td>
+					<input type="text" name="smsCode">
+					<a href="/captcha/sms?phoneNumberParam=13012345678">发送验证码</a>
+				</td>
+			</tr>
+			<tr>
+				<td colspan="2"><button type="submit">登录</button></td>
+			</tr>
+		</table>
+	</form>
+
 </div>
 
 <script type="text/javascript" src="./assets/js/jquery-1.8.0.min.js"></script>
