--- a/bdazjweb/src/main/resources/public/index.html
+++ b/bdazjweb/src/main/resources/public/index.html
@@ -89,7 +89,7 @@
 </div>
 <div class="tyg-div-denglv">
 	<div class="tyg-div-form">
-		<form action="/login" id="loginForm" method="post">
+		<form action="/authentication/form" id="loginForm" method="post">
 			<h2>登录</h2><p class="tyg-p">欢迎访问  佰聆数据</p>
 			<div style="margin:5px 0px;">
 				<input type="text" placeholder="请输入账号..." name="username"/>
@@ -100,10 +100,10 @@
 			<div style="margin:5px 0px;">
 				记住我<input type="checkbox"  name="remember-me" value="true"/>
 			</div>
-			<div style="margin:5px 0px;">
+			<!--<div style="margin:5px 0px;">
 				<input type="text" name="imageCode" style="width:150px;" placeholder="请输入验证码..."/>
 				<img src="/captcha/graphical?width=100" style="vertical-align:bottom;" alt="验证码"/>
-			</div>
+			</div>-->
 			<button type="submit" id="loginButton">登<span style="width:20px;"></span>录</button>
 		</form>
 	</div>
