--- a/bdazjweb/src/main/resources/public/index.html
+++ b/bdazjweb/src/main/resources/public/index.html
@@ -102,7 +102,7 @@
 			</div>
 			<div style="margin:5px 0px;">
 				<input type="text" name="imageCode" style="width:150px;" placeholder="请输入验证码..."/>
-				<img src="/code/image" style="vertical-align:bottom;" alt="验证码"/>
+				<img src="/code/image?width=80" style="vertical-align:bottom;" alt="验证码"/>
 			</div>
 			<button type="submit" id="loginButton">登<span style="width:20px;"></span>录</button>
 		</form>
