增加Session相关配置

--- a/bdazjweb/src/main/resources/public/signUp.html
+++ b/bdazjweb/src/main/resources/public/signUp.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>测试Demo页</title>
+    <title>注册页面</title>
 </head>
 <body>
-<h1>Session失效</h1>
+
+
+
 </body>
 </html>
